Update and rename index.html to Add path to MWDW2 Assignment 6 files in index.html

--- a/Add path to MWDW2 Assignment 6 files in index.html
+++ b/Add path to MWDW2 Assignment 6 files in index.html
@@ -87,6 +87,21 @@
                     <li><a href="./MWDW2/Assignment5/q10.html">Q10</a></li>
                 </ol>
             </details>
+            <details>
+                <summary>Assignment 6</summary>
+                <ol>
+                    <li><a href="./MWDW2/Assignment6/q1.html">Q1</a></li>
+                    <li><a href="./MWDW2/Assignment6/q2.html">Q2</a></li>
+                    <li><a href="./MWDW2/Assignment6/q3.html">Q3</a></li>
+                    <li><a href="./MWDW2/Assignment6/q4.html">Q4</a></li>
+                    <li><a href="./MWDW2/Assignment6/q5.html">Q5</a></li>
+                    <li><a href="./MWDW2/Assignment6/q6.html">Q6</a></li>
+                    <li><a href="./MWDW2/Assignment6/q7.html">Q7</a></li>
+                    <li><a href="./MWDW2/Assignment6/q8.html">Q8</a></li>
+                    <li><a href="./MWDW2/Assignment6/q9.html">Q9</a></li>
+                    <li><a href="./MWDW2/Assignment6/q10.html">Q10</a></li>
+                </ol>
+            </details>
         </ol>
 
         <li><h2>COA</h2></li>
