Add jQuery Mobile files

--- a/MWDW2/jQMobile/index.html
+++ b/MWDW2/jQMobile/index.html
@@ -14,7 +14,7 @@
             <h1>Header</h1>
         </div>
         <div data-role="content" style="text-align:center;">
-            <p>This is a single boilerplate page</p>
+            <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source codes of the book</p>
         </div>
         <div data-role="footer">
             <h1>Footer <a data-transition="slide" href="./p1.html">Click</a></h1>
