Add AD Lab 6 & 7 files

--- a/index.html
+++ b/index.html
@@ -102,6 +102,14 @@
                     <li><a href="./MWDW2/Assignment6/q10.html">Q10</a></li>
                 </ol>
             </details>
+            <details>
+                <summary>jQuery Mobile</summary>
+                <a target="_blank" href="./MWDW2/jQMobile/">jQueryMobile</a>
+                <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source codes of the book</p>
+                <!-- <ol>
+                    <li><a href="./MWDW2/Assignment6/q1.html">Q1</a></li>
+                </ol> -->
+            </details>
         </ol>
 
         <li><h2>COA</h2></li>
@@ -171,11 +179,31 @@
                     <li><a href="./AD2/HashTableLP.java">Lab 4</a></li>
                     <li>
                         <details>
+                            <summary>Lab 5</summary>
+                            <ol>
+                                <li><a href="./AD2/Lab5/activityScheduling.java">Activity scheduling</a></li>
+                                <li><a href="./AD2/Lab5/fractionalKnapsack.java">Fractional Knapsack</a></li>
+                                <li><a href="./AD2/Lab5/huffman.java">Huffman coding</a></li>
+                            </ol>
+                        </details>
+                    </li>
+                    <li>
+                        <details>
                             <summary>Lab 6</summary>
                             <ol>
-                                <li><a href="./AD2//0605/activityScheduling.java">Activity scheduling</a></li>
-                                <li><a href="./AD2//0605/fractionalKnapsack.java">Fractional Knapsack</a></li>
-                                <li><a href="./AD2//0605/huffman.java">Huffman coding</a></li>
+                                <li><a href="./AD2/Lab6/inversion.java">Counting inversion</a></li>
+                                <li><a href="./AD2/Lab6/MergeSort.java">Merge sort</a></li>
+                                <li><a href="./AD2/Lab6/QuickSort.java">Quick sort</a></li>
+                            </ol>
+                        </details>
+                    </li>
+                    <li>
+                        <details>
+                            <summary>Lab 7</summary>
+                            <ol>
+                                <li><a href="./AD2/Lab7/knapSack01.java">0/1 Knapsack</a></li>
+                                <li><a href="./AD2/Lab7/lcs.java">Largest common subsequence</a></li>
+                                <!-- <li><a href="./AD2/Lab5/huffman.java">Huffman coding</a></li> -->
                             </ol>
                         </details>
                     </li>
