Add COA Lab 5 files

--- a/index.html
+++ b/index.html
@@ -164,6 +164,16 @@
                             </ol>
                         </details>
                     </li>
+                    <li>
+                        <details>
+                            <summary>Lab 5</summary>
+                            <ol>
+                               <li><a href="./COA/Lab5/obj1largest.s">Obj 1 - Largest</a></li>
+                               <li><a href="./COA/Lab5/obj1smallest.s">Obj 1 - Smallest</a></li>
+                               <li><a href="./COA/Lab5/obj2.s">Obj 2</a></li>
+                            </ol>
+                        </details>
+                    </li>
                 </ol>
             </details>
         </ol>
