--- a/MWDW2/jQMobile/index.html
+++ b/MWDW2/jQMobile/index.html
@@ -9,15 +9,55 @@
     <title>jQueryMobile</title>
 </head>
 <body>
-    <div data-role="page">
-        <div data-role="header">
+    <div data-role="page" id="page-1">
+        <div data-role="header" data-position="fixed">
             <h1>Header</h1>
+            <a href="#page-2" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-icon-notext"></a>
         </div>
         <div data-role="content" style="text-align:center;">
-            <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source codes of the book</p>
+            <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source code of the book</p>
+        </div>
+        <div data-role="footer" data-position="fixed">
+            <h1>Footer</h1>
+        </div>
+    </div>
+    <div data-role="page" id="page-2">
+        <div data-role="header">
+            <a href="#page-1" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext"></a>
+            <h1>Header 2</h1>
+            <a href="#page-3" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-icon-notext"></a>
+        </div>
+        <div data-role="content" style="text-align:center;">
+            <p>This is another single boilerplate page</p>
         </div>
         <div data-role="footer">
-            <h1>Footer <a data-transition="slide" href="./p1.html">Click</a></h1>
+            <h1>Footer 2</h1>
+        </div>
+    </div>
+    <div data-role="page" id="page-3">
+        <div data-role="header">
+            <a href="#page-2" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext"></a>
+            <h1>Header 3</h1>
+            <a href="#page-4" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-icon-notext"></a>
+        </div>
+        <div data-role="content" style="text-align:center;">
+            <p>This is another single boilerplate page</p>
+        </div>
+        <div data-role="footer">
+            <h1>Footer 3</h1>
+        </div>
+    </div>
+    <div data-role="page" id="page-4">
+        <div data-role="header">
+            <a href="#page-3" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext"></a>
+            <h1>Header 4</h1>
+            <a href="#page-1" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-home ui-btn-icon-notext"></a>
+        </div>
+        <div data-role="content" style="text-align:center;">
+            <p>This is another single boilerplate page</p>
+        </div>
+        <div data-role="footer">
+            <h1>Footer 4</h1>
         </div>
     </div>
 </body>
