--- a/MWDW2/jQMobile/index.html
+++ b/MWDW2/jQMobile/index.html
@@ -22,7 +22,7 @@
         </div>
     </div>
     <div data-role="page" id="page-2">
-        <div data-role="header">
+        <div data-role="header" data-position="fixed">
             <a href="#page-1" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext"></a>
             <h1>Header 2</h1>
             <a href="#page-3" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-icon-notext"></a>
@@ -30,12 +30,12 @@
         <div data-role="content" style="text-align:center;">
             <p>This is another single boilerplate page</p>
         </div>
-        <div data-role="footer">
+        <div data-role="footer" data-position="fixed">
             <h1>Footer 2</h1>
         </div>
     </div>
     <div data-role="page" id="page-3">
-        <div data-role="header">
+        <div data-role="header" data-position="fixed">
             <a href="#page-2" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext"></a>
             <h1>Header 3</h1>
             <a href="#page-4" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-icon-notext"></a>
@@ -43,12 +43,12 @@
         <div data-role="content" style="text-align:center;">
             <p>This is another single boilerplate page</p>
         </div>
-        <div data-role="footer">
+        <div data-role="footer" data-position="fixed">
             <h1>Footer 3</h1>
         </div>
     </div>
     <div data-role="page" id="page-4">
-        <div data-role="header">
+        <div data-role="header" data-position="fixed">
             <a href="#page-3" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-back ui-btn-icon-notext"></a>
             <h1>Header 4</h1>
             <a href="#page-1" data-transition="slide" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-icon-home ui-btn-icon-notext"></a>
@@ -56,7 +56,7 @@
         <div data-role="content" style="text-align:center;">
             <p>This is another single boilerplate page</p>
         </div>
-        <div data-role="footer">
+        <div data-role="footer" data-position="fixed">
             <h1>Footer 4</h1>
         </div>
     </div>
