--- a/MWDW2/jQMobile/index.html
+++ b/MWDW2/jQMobile/index.html
@@ -12,7 +12,7 @@
     <div data-role="page" id="page-1">
         <div data-role="header" data-position="fixed">
             <h1>Header</h1>
-            <a href="#page-2" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-icon-notext"></a>
+            <a href="#page-2" data-transition="slide" class="ui-btn ui-shadow ui-corner-all ui-icon-forward ui-btn-right ui-btn-icon-notext"></a>
         </div>
         <div data-role="content" style="text-align:center;">
             <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source code of the book</p>
