--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
             <details>
                 <summary>jQuery Mobile</summary>
                 <a target="_blank" href="./MWDW2/jQMobile/">jQueryMobile</a>
-                <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source codes of the book</p>
                 <!-- <ol>
                     <li><a href="./MWDW2/Assignment6/q1.html">Q1</a></li>
                 </ol> -->
             </details>
+            <p><a target="_blank" href="//github.com/RobinNixon/lpmj6">Visit</a> the author's github repo for all source code of the book</p>
         </ol>
 
         <li><h2>COA</h2></li>
