Update MWDW2 practice question q11.html css

--- a/MWDW2/practice question2/q11.html
+++ b/MWDW2/practice question2/q11.html
@@ -8,6 +8,7 @@
 <body>
     <style>
         .container {
+            position: relative;
             border: 1px solid;
         }
         .box1 {
@@ -18,8 +19,9 @@
         }
         .box2 {
             position: absolute;
-            top: 20px;
+            top: 220px;
             left: 50%;
+            transform: translate(-50%);
             width: 300px;
             height: 200px;
             background-color: green;
