--- a/5th sem/React/A1/q9.html
+++ b/5th sem/React/A1/q9.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Q9</title>
 </head>
-
 <body>
    <script>
       // 1
@@ -48,12 +46,7 @@
       console.log(onlyUniques(1, 2, 3, 3, 1))
 
       // 6
-      const combineAllArrays = (...arrays) => {
-         let temp = []
-         for(let ar of arrays)
-            temp = [...temp, ...ar]
-         return temp
-      }
+      const combineAllArrays = (...arrays) => arrays.reduce((acc, c) => [...acc, ...c])
       console.log(combineAllArrays([1, 2], [3, 4], [5, 6]))
 
       // 7
@@ -61,5 +54,4 @@
       console.log(squareAndSum(5, 2, 2))
    </script>
 </body>
-
 </html>
