--- a/5th sem/React/A1/q9.html
+++ b/5th sem/React/A1/q9.html
@@ -12,13 +12,7 @@
       console.log(sumAll(1, 2))
 
       // 2
-      const addOnlyNums = (...nums) => {
-         let sum = 0
-         nums.map(n => {
-            if(typeof n === "number") sum += n
-         })
-         return sum
-      }
+      const addOnlyNums = (...nums) => nums.reduce((acc, c) => typeof c === "number" ? acc + c : acc, 0)
       console.log(addOnlyNums(1, "s", 2, 4, 1))
 
       // 3
@@ -26,23 +20,11 @@
       console.log(combineTwoArrays([1, 4], [3, 6]))
 
       // 4
-      const sumEveryOther = (...nums) => {
-         let sum = 0
-         for (i = 0; i < nums.length; i++)
-            if (!(i % 2))
-               sum += nums[i]
-         return sum
-      }
+      const sumEveryOther = (...nums) => nums.reduce((acc, c, i) => !(i % 2) ? acc + c : acc, 0)
       console.log(sumEveryOther(1, 2, 3, 4, 5))
 
       // 5
-      const onlyUniques = (...nums) => {
-         const temp = []
-         nums.map(n => {
-            if(!temp.includes(n)) temp.push(n)
-         })
-         return temp
-      }
+      const onlyUniques = (...nums) => nums.reduce((acc, c) => !acc.includes(c) ? (acc.push(c), acc) : acc, [])
       console.log(onlyUniques(1, 2, 3, 3, 1))
 
       // 6
